--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
-    <div class="pokedex">
+    <div class="pokedexContainer">
       <div class="topButtons">
         <div class="bigBlueButtonBorder">
           <div class="bigBlueButtonInnerCircle"></div>
@@ -15,6 +15,19 @@
         <div class="smallYellowButton"></div>
         <div class="smallGreenButton"></div>
       </div>
+
+      <div class="pokedexScreenContainer">
+        <div class="pokedexScreenBorder">
+          <div class="pokedexScreenSmallRedButton1"></div>
+          <div class="pokedexScreenSmallRedButton2"></div>
+          <div class="pokedexScreen">
+
+          </div>
+          <div class="pokedexScreenBigRedButton"></div>
+          <div class="pokedexScreenLines"></div>
+        </div>
+      </div>
+
     </div>
   </body>
 </html>
