--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="pokedexContainer">
-      <div class="topButtons">
+      <div class="topContainer">
         <div class="bigBlueButtonBorder">
           <div class="bigBlueButtonInnerCircle"></div>
         </div>
@@ -24,7 +24,27 @@
 
           </div>
           <div class="pokedexScreenBigRedButton"></div>
-          <div class="pokedexScreenLines"></div>
+
+          <div class="pokedexScreenSpeaker">
+            <div class="pokedexScreenLines"></div>
+            <div class="pokedexScreenLines"></div>
+            <div class="pokedexScreenLines"></div>
+            <div class="pokedexScreenLines"></div>
+          </div>
+        </div>
+      </div>
+
+      <div class="bottomContainer">
+        <div class="blackButton"></div>
+        <div class="redButton"></div>
+        <div class="blueButton"></div>
+        <div class="greenScreen">
+
+        </div>
+        <div class="dPad">
+          <div class="dPadUp"></div>
+          <div class="dPadMiddle"></div>
+          <div class="dPadDown"></div>
         </div>
       </div>
 
