completed basic structure and styling

--- a/index.html
+++ b/index.html
@@ -4,50 +4,110 @@
     <meta charset="utf-8">
     <title>Pokedex</title>
     <link rel="stylesheet" href="css/styles.css">
+    <style>
+    @import url('https://fonts.googleapis.com/css?family=VT323');
+    </style>
   </head>
   <body>
-    <div class="pokedexContainer">
-      <div class="topContainer">
-        <div class="bigBlueButtonBorder">
-          <div class="bigBlueButtonInnerCircle"></div>
-        </div>
-        <div class="smallRedButton"></div>
-        <div class="smallYellowButton"></div>
-        <div class="smallGreenButton"></div>
-      </div>
+    <div class="pokedex">
+      <div class="pokedexContainer">
 
-      <div class="pokedexScreenContainer">
-        <div class="pokedexScreenBorder">
-          <div class="pokedexScreenSmallRedButton1"></div>
-          <div class="pokedexScreenSmallRedButton2"></div>
-          <div class="pokedexScreen">
+        <div class="pokedexContainerLeft">
+
+          <div class="topContainer">
+            <div class="blueLightBorder">
+              <div class="blueLightCircle"></div>
+            </div>
+            <div class="redLight"></div>
+            <div class="yellowLight"></div>
+            <div class="greenLight"></div>
+          </div>
+
+          <div class="pokemonDisplayContainer">
+            <div class="pokemonDisplayBorder">
+              <div class="pokemonDisplayRedLight1"></div>
+              <div class="pokemonDisplayRedLight2"></div>
+              <div class="pokemonDisplay">
+
+              </div>
+              <div class="pokemonDisplayBigRedLight"></div>
+
+              <div class="pokemonDisplaySpeaker">
+                <div class="pokemonDisplayLines"></div>
+                <div class="pokemonDisplayLines"></div>
+                <div class="pokemonDisplayLines"></div>
+                <div class="pokemonDisplayLines"></div>
+              </div>
+            </div>
+          </div>
+
+          <div class="bottomContainer">
+            <div class="blackButton"></div>
+            <div class="redButton"></div>
+            <div class="blueButton"></div>
+            <div class="pokemonNameDisplay">
+
+            </div>
+            <div class="dPad">
+              <div class="dPadUp"></div>
+              <div class="dPadMiddle"></div>
+              <div class="dPadDown"></div>
+            </div>
 
           </div>
-          <div class="pokedexScreenBigRedButton"></div>
+        </div>
 
-          <div class="pokedexScreenSpeaker">
-            <div class="pokedexScreenLines"></div>
-            <div class="pokedexScreenLines"></div>
-            <div class="pokedexScreenLines"></div>
-            <div class="pokedexScreenLines"></div>
+        <div class="pokedexHinge">
+          <div class="pokedexHingeMiddle"></div>
+          <div class="pokedexHingeBottom1"></div>
+          <div class="pokedexHingeBottom2"></div>
+        </div>
+
+        <div class="pokedexContainerRight">
+          <div class="topEmptySpace">
           </div>
-        </div>
-      </div>
 
-      <div class="bottomContainer">
-        <div class="blackButton"></div>
-        <div class="redButton"></div>
-        <div class="blueButton"></div>
-        <div class="greenScreen">
+          <div class="descriptionDisplay">
+          </div>
+
+          <div class="numberButtonContainer">
+            <button class="numberButton" type="button" name="button">1</button>
+            <button class="numberButton" type="button" name="button">2</button>
+            <button class="numberButton" type="button" name="button">3</button>
+            <button class="numberButton" type="button" name="button">4</button>
+            <button class="numberButton" type="button" name="button">5</button>
+            <button class="numberButton" type="button" name="button">6</button>
+            <button class="numberButton" type="button" name="button">7</button>
+            <button class="numberButton" type="button" name="button">8</button>
+            <button class="numberButton" type="button" name="button">9</button>
+            <button class="numberButton" type="button" name="button">0</button>
+          </div>
+
+          <div class="dataButtons">
+            <button class="submitData" type="button" name="button"></button>
+            <button class="clearData" type="button" name="button"></button>
+          </div>
+
+          <div class="pokedexInput">
+            <input type="text" name="" value="" placeholder="search pokedex">
+          </div>
+
+          <div class="bigYellowLight">
+          </div>
+
+          <div class="typeDisplayContainer">
+            <div class="typeDisplay typeOneDisplay">
+            </div>
+
+            <div class="typeDisplay typeTwoDisplay">
+            </div>
+          </div>
+
+          </div>
 
         </div>
-        <div class="dPad">
-          <div class="dPadUp"></div>
-          <div class="dPadMiddle"></div>
-          <div class="dPadDown"></div>
-        </div>
-      </div>
 
     </div>
+
   </body>
 </html>
