updated with placeholder details and  made some small styling changes

--- a/index.html
+++ b/index.html
@@ -25,10 +25,12 @@
 
           <div class="pokemonDisplayContainer">
             <div class="pokemonDisplayBorder">
-              <div class="pokemonDisplayRedLight1"></div>
-              <div class="pokemonDisplayRedLight2"></div>
+              <div class="pokemonDisplayTopLights">
+                <div class="pokemonDisplayRedLight"></div>
+                <div class="pokemonDisplayRedLight"></div>
+              </div>
               <div class="pokemonDisplay">
-
+                <img class="pokemonSprite" src="http://i.imgur.com/F7VElmC.png" alt="">
               </div>
               <div class="pokemonDisplayBigRedLight"></div>
 
@@ -46,7 +48,7 @@
             <div class="redButton"></div>
             <div class="blueButton"></div>
             <div class="pokemonNameDisplay">
-
+              Arcanine
             </div>
             <div class="dPad">
               <div class="dPadUp"></div>
@@ -68,6 +70,7 @@
           </div>
 
           <div class="descriptionDisplay">
+            This legendary Chinese Pokémon is considered magnificent. Many people are enchanted by its grand mane.
           </div>
 
           <div class="numberButtonContainer">
@@ -97,6 +100,7 @@
 
           <div class="typeDisplayContainer">
             <div class="typeDisplay typeOneDisplay">
+              Fire
             </div>
 
             <div class="typeDisplay typeTwoDisplay">
