--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
           </div>
 
           <div class="dataButtons">
-            <button class="submitData" type="button" name="button"></button>
-            <button class="clearData" type="button" name="button"></button>
+            <button class="submitButton" type="button" name="button"></button>
+            <button class="clearButton" type="button" name="button"></button>
           </div>
 
           <div class="pokedexInput">
@@ -113,5 +113,6 @@
 
     </div>
 
+    <script src="scripts/script.js" charset="utf-8"></script>
   </body>
 </html>
