Hook up to script.js file

--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
             <div class="redButton"></div>
             <div class="blueButton"></div>
             <div class="pokemonNameDisplay">
-              Arcanine
             </div>
             <div class="dPad">
               <div class="dPadUp"></div>
@@ -87,8 +86,8 @@
           </div>
 
           <div class="dataButtons">
-            <button class="submitData" type="button" name="button"></button>
-            <button class="clearData" type="button" name="button"></button>
+            <button class="submitButton" type="button" name="button"></button>
+            <button class="clearButton" type="button" name="button"></button>
           </div>
 
           <div class="pokedexInput">
@@ -113,5 +112,6 @@
 
     </div>
 
+    <script src="scripts/script.js" charset="utf-8"></script>
   </body>
 </html>
