cleanup repetitive styles

--- a/index.html
+++ b/index.html
@@ -12,24 +12,24 @@
     <main id="pokedex">
       <section id="left">
         <div class="topContainer">
-          <div class="blueLightBorder">
-            <div class="blueLightCircle"></div>
+          <div class="circle blueLightBorder blackBorder">
+            <div class="circle blueLight"></div>
           </div>
-          <div class="redLight"></div>
-          <div class="yellowLight"></div>
-          <div class="greenLight"></div>
+          <div class="circle light redLight blackBorder"></div>
+          <div class="circle light yellowLight blackBorder"></div>
+          <div class="circle light greenLight blackBorder"></div>
         </div>
 
         <div id="imgDisplay">
-          <div class="border">
+          <div class="border blackBorder">
             <div class="topLights">
-              <div class="light"></div>
-              <div class="light"></div>
+              <div class="circle light blackBorder"></div>
+              <div class="circle light blackBorder"></div>
             </div>
-            <div class="pokemonImg">
+            <div class="pokemonImg blackBorder darkInset">
               <img class="pokemonSprite" src="http://i.imgur.com/F7VElmC.png" alt="">
             </div>
-            <div class="big light"></div>
+            <div class="big circle light blackBorder"></div>
 
             <div class="speaker">
               <div class="line"></div>
@@ -40,11 +40,11 @@
           </div>
         </div>
 
-        <div class="bottom">
-          <div class="blackButton"></div>
-          <div class="redButton"></div>
-          <div class="blueButton"></div>
-          <div class="nameDisplay">
+        <section class="bottom">
+          <div class="circle blackButton"></div>
+          <div class="redButton red narrowButton blackBorder"></div>
+          <div class="blue narrowButton blackBorder"></div>
+          <div class="nameDisplay blackBorder">
           </div>
           <div id="dPad">
             <div class="up"></div>
@@ -52,20 +52,20 @@
             <div class="down"></div>
           </div>
 
-        </div>
+        </section>
       </section>
 
       <section id="hinge">
         <div class="middle"></div>
         <div class="bottom1"></div>
-        <div class="bottom2"></div>
+        <div class="bottom2 circle"></div>
       </section>
 
       <section id="right">
         <div class="emptyTop">
         </div>
 
-        <div id="description">
+        <div id="description" class="blackBorder darkInset">
           This legendary Chinese Pokémon is considered magnificent. Many people are enchanted by its grand mane.
         </div>
 
@@ -83,22 +83,22 @@
         </section>
 
         <div id="dataButtons">
-          <button id="submit" type="button" name="button"></button>
-          <button id="clear" type="button" name="button"></button>
+          <button id="submit" class="blackBorder" type="button" name="button"></button>
+          <button id="clear" class="blackBorder" type="button" name="button"></button>
         </div>
 
         <div class="pokedexInput">
           <input type="text" name="" value="" placeholder="search pokedex">
         </div>
 
-        <div class="bigYellowLight">
+        <div class="circle blackBorder bigYellowLight">
         </div>
 
         <section id="typeDisplay">
-          <div class="typeOne">
+          <div class="typeOne blackBorder darkInset">
             Fire
           </div>
-          <div class="typeTwo">
+          <div class="typeTwo blackBorder darkInset">
           </div>
         </section>
 
