add darkInset, side, and dataButton styles to reduce repetition

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <main id="pokedex">
-      <section id="left">
+      <section id="left" class="side">
         <div class="topContainer">
           <div class="circle blueLightBorder blackBorder">
             <div class="circle blueLight"></div>
@@ -61,7 +61,7 @@
         <div class="bottom2 circle"></div>
       </section>
 
-      <section id="right">
+      <section id="right" class="side">
         <div class="emptyTop">
         </div>
 
