add pokedex API calls

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
               <div class="circle light blackBorder"></div>
               <div class="circle light blackBorder"></div>
             </div>
-            <div class="pokemonImg blackBorder darkInset">
-              <img class="pokemonSprite" src="http://i.imgur.com/F7VElmC.png" alt="">
+            <div class="pkmnImg blackBorder darkInset">
+              <img class="pkmnSprite" src="http://i.imgur.com/F7VElmC.png" alt="">
             </div>
             <div class="big circle light blackBorder"></div>
 
@@ -44,7 +44,7 @@
           <div class="circle blackButton"></div>
           <div class="redButton red narrowButton blackBorder"></div>
           <div class="blue narrowButton blackBorder"></div>
-          <div class="nameDisplay blackBorder">
+          <div id ="nameDisplay" class="blackBorder">
           </div>
           <div id="dPad">
             <div class="up"></div>
@@ -65,7 +65,7 @@
         <div class="emptyTop">
         </div>
 
-        <div id="description" class="blackBorder darkInset">
+        <div id="pkmnDescription" class="blackBorder darkInset">
           This legendary Chinese Pokémon is considered magnificent. Many people are enchanted by its grand mane.
         </div>
 
