--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
           <div class="circle blackButton"></div>
           <div class="redButton red narrowButton blackBorder"></div>
           <div class="blue narrowButton blackBorder"></div>
-          <div id ="nameDisplay" class="blackBorder">
-          </div>
+          <div id ="nameDisplay" class="blackBorder">Arcanine</div>
           <div id="dPad">
             <div class="up"></div>
             <div class="middle"></div>
